[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/PlayerDeck.gd" type="Script" id=1]

[node name="PlayerDeck" type="Node2D"]
script = ExtResource( 1 )

[node name="CardContainer" type="HBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 120.0

[connection signal="child_order_changed" from="CardContainer" to="." method="_on_CardContainer_child_order_changed"]
